# html_css_basics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
html_css_basics/: app.py
tests/: test_hello.py
