[project]
name = "html_css_basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["html_css_basics"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt", "requirements-dev.txt"]}

[tool.coverage]
branch = true
source = ["html_css_basics"]

[tool.coverage.run]
omit = [
    "tests/*"
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
fix = true
line-length = 88
src = ["html_css_basics"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.isort]
known-local-folder = ["html_css_basics"]
no-lines-before = ["local-folder"]